# computational-judicial-simulation

./: .env.example  .gitignore  .gittignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
app/: logging_config.py  main.py  settings.py
app/api/: routes.py
app/db/: models.py  seed.py  session.py
app/decision/ceza/: puanlama.py
app/decision/ozel/: tazminat.py
app/retrieval/: arama.py
app/schemas/: dava.py  response.py
app/services/: atif_uretici.py  dava_coz.py  dosya_okuyucu.py  karar_servisi.py  pdf_servisi.py
app/static/: app.css
app/templates/: index.html  result.html  web.html  web_form.html
data/case_law/: ornek_placeholder.json
data/laws/: ornek_placeholder.json  tbk_49_gercek.json
hakim_simulasyonu.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: ingest.py  validate_seed.py
